--- a/.github/workflows/run-checks.yml
+++ b/.github/workflows/run-checks.yml
@@ -1,14 +1,14 @@
-name: Run examples
+name: Run checks
 
 on: [push, pull_request]
 
 jobs:
+
   run-examples:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         environment: ["py36", "py37", "py38"]
-
         include:
           - environment: "py36"
             python: "3.6"
@@ -16,10 +16,8 @@ jobs:
             python: "3.7"
           - environment: "py38"
             python: "3.8"
-
     container:
       image: python:${{ matrix.python }}
-
     steps:
       - uses: actions/checkout@master
       - name: Install requirements
@@ -36,3 +34,16 @@ jobs:
         run: python examples/04_injecting_functionality.py
       - name: Run example 05
         run: python examples/05_debugging_mro.py
+        
+  run-mypy:
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.8
+    steps:
+      - uses: actions/checkout@master
+      - name: Install requirements
+        run: |
+          python -m pip install --upgrade pip mypy
+          python -m pip install -r requirements.txt
+      - name: Run mypy
+        run: mypy examples/
